# server/src/main/java/org/candlepin/resteasy/JsonProvider.java
@@ -34,7 +34,6 @@ import org.candlepin.dto.api.v1.DistributorVersionDTO;
 import org.candlepin.dto.api.v1.GuestIdDTO;
 import org.candlepin.dto.api.v1.GuestIdDTOArrayElement;
 import org.candlepin.dto.api.v1.NestedOwnerDTO;
-import org.candlepin.dto.api.v1.NestedUpstreamConsumerDTO;
 import org.candlepin.dto.api.v1.OwnerDTO;
 import org.candlepin.dto.api.v1.PermissionBlueprintDTO;
 import org.candlepin.dto.api.v1.ReleaseVerDTO;
@@ -42,7 +41,6 @@ import org.candlepin.dto.api.v1.RoleDTO;
 import org.candlepin.dto.api.v1.StatusDTO;
 import org.candlepin.dto.api.v1.TimestampedEntity;
 import org.candlepin.dto.api.v1.UpstreamConsumerDTO;
-import org.candlepin.dto.api.v1.UpstreamConsumerDTOArrayElement;
 import org.candlepin.dto.api.v1.UserDTO;
 import org.candlepin.jackson.DateSerializer;
 import org.candlepin.jackson.OffsetDateTimeDeserializer;
@@ -180,8 +178,6 @@ public class JsonProvider extends JacksonJsonProvider {
         mapper.addMixIn(UserDTO.class, DynamicPropertyFilterMixIn.class);
         mapper.addMixIn(OwnerDTO.class, DynamicPropertyFilterMixIn.class);
         mapper.addMixIn(UpstreamConsumerDTO.class, DynamicPropertyFilterMixIn.class);
-        mapper.addMixIn(UpstreamConsumerDTOArrayElement.class, DynamicPropertyFilterMixIn.class);
-        mapper.addMixIn(NestedUpstreamConsumerDTO.class, DynamicPropertyFilterMixIn.class);
         //TODO: Add more mix-ins here as more DTOs are ported to openapi spec
     }
 }
